[tool.poetry]
name = "jwt-http-proxy"
version = "0.1.0"
description = ""
authors = ["Cameron Villers <cameron@ville.rs>"]
packages = [
    { include = "jwt_proxy" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "22.10.0"
isort = "5.10.1"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
